--- a/java/泛型.md
+++ b/java/泛型.md
@@ -94,6 +94,8 @@ public void test5() {
 	l5 = l4;
 //        l1.add(new Father());
 	l1.add(null);
+	lx.add(new Son3());
+        lx.add(new SomeSubClassOfSon3());
 }
 ```
 
