--- a/java/面试题.md
+++ b/java/面试题.md
@@ -42,10 +42,8 @@ https://blog.csdn.net/qq_25827845/article/details/76735277
 
 
 ### 三、多线程  
-什么是线程？  
-线程和进程有什么区别？  
-如何在Java中实现线程？  
-用Runnable还是Thread？  
+什么是线程？线程和进程有什么区别？  
+如何在Java中实现线程？用Runnable还是Thread？  
 Thread 类中的start() 和 run() 方法有什么区别？  
 Java中Runnable和Callable有什么不同？  
 Java中的volatile 变量是什么？  
