--- a/java/多线程.md
+++ b/java/多线程.md
@@ -265,7 +265,7 @@ public void run() {
 **线程安全的单例模式**
 ```java
 class Bank {
-    private static Bank single = null;
+    private volatile static Bank single = null;
 
     public static Bank getInstance() {
         // 方式1：效率差
