--- a/java/多线程.md
+++ b/java/多线程.md
@@ -8,6 +8,10 @@
 * **并行：** 多个CPU同时（同一时间点）执行多个任务。
 * **并发：** 一个CPU“同时”（同一时间段）执行多个任务。
 
+**JVM是否支持多进程：**
+java程序运行在jvm虚拟机中，每启动一个java程序相当于启动一个jvm进程，而在同一个jvm进程中自然只会有一个进程（他自己）Jvm环境中，所有的任务都是通过线程执行的。在一个jvm进程中，main方法是程序的入口，它是主线程。当主线程结束，程序会退出。所以jvm中（单个程序而言）没有多进程。
+
+
 
 #### 2. 线程的创建
 **关于Thread类：**
@@ -56,13 +60,14 @@ Thread.NORM_PRIORITY=5;
 
 与Runnable相比，Callable功能更强大：
 它可以给方法传参数；
-可以抛出异常；
+可以抛出异常；(子线程抛出异常未处理，主线程强制结束)
 支持泛型返回值；
 但是需要再借助FutureTask类完成一些功能。
 
 **方式4：** 使用线程池
 线程池：提前创建好多个线程，放入线程池，使用时直接获取，用完后归还，避免频繁创建销毁线程，实现重复利用，效率高效应快，降低资源消耗，便于管理。
 
+当线程池中抛出异常但是未处理时，会造成线程池整体退出无法使用，但是主线程继续执行。
 
 
 ```java
@@ -530,3 +535,19 @@ public class ClassicTest {
     }
 }
 ```
+#### 6. CAS
+我们已经知道Java解决并发控制的方式就是上面所说的锁（不管是synchronized还是Lock），通过锁可以保证同一时刻是有一个线程访问临界区资源，实现安全。但是这是一种悲观锁的策略（并不是一定会发生线程安全问题，但是采取了最激进的策略），一个线程访问资源，其他线程必须等待。那么相对的就有乐观锁机制（无锁）。它假设线程对资源的访问不会出现冲突，那么所有的线程都无需等待。一旦真的遇到冲突，就使用一种CAS技术来鉴别处理。
+
+**关于Unsafe类**
+Java无法直接访问底层操作系统，而是通过本地（native）方法来访问。不过尽管如此，JVM还是开了一个后门，JDK中有一个类Unsafe，它提供了硬件级别的原子操作。这个类尽管里面的方法都是public的，但是我们在应用代码中并没有办法使用它们。
+
+**关于CAS**
+CAS全称是Compare-And-Swap，即比较并交换。我们常用的java.util.concurrent包就是完全建立在CAS之上的。当前的处理器都支持CAS，只不过不同的CPU厂商的具体实现不完全一样。
+
+CAS靠硬件实现，是一条CPU的原子指令，基于汇编指令CMPXCHG（Intel x86）实现，这个指令带Lock前缀，其作用是让CPU先比较两个值是否相等，然后原子性地更新某个内存地址的值。
+
+CAS有三个参数：V、A、B。内存值V、旧的预期值A、要修改的值B，当且仅当预期值A和内存值V相同时，将内存值修改为B并返回true，否则什么都不做并返回false。CAS指令执行时，当且仅当V的值等于预期值A时，才会将V的值设为B。在多线程的情况下，当多个线程同时使用CAS操作一个变量时，只有一个会成功并更新值，其余线程均会失败，但失败的线程不会被挂起，而是不断的再次循环重试。正是基于这样的原理，CAS即时没有使用锁，也能发现其他线程对当前线程的干扰，从而进行及时的处理。可见CAS其实是一个乐观锁。
+
+**CAS的缺点**
+* ABA的问题，就是一个值从A变成了B又变成了A，使用CAS操作不能发现这个值发生变化了，因为CAS需要在操作值的时候检查下值有没有发生变化，如果没有发生变化则更新，但是如果一个值原来是A，变成了B，又变成了A，那么使用CAS进行检查时会发现它的值没有发生变化，但是实际上却变化了。ABA问题的解决思路就是使用版本号。在变量前面追加上版本号，每次变量更新的时候把版本号加一，那么A－B－A 就会变成1A-2B－3A。也可以使用携带类似时间戳的版本AtomicStampedReference。
+* 循环时间长开销大导致的性能问题，我们使用时大部分时间使用的是 while(true)方式对数据的修改，直到成功为止。优势就是相应极快，但当线程数不停增加时，性能下降明显，因为每个线程都需要执行，占用CPU时间。
