--- a/bigData/Flink/安装部署.md
+++ b/bigData/Flink/安装部署.md
@@ -1,5 +1,5 @@
 #### 组件与架构
-!images](https://github.com/LadyTao/study-notes/blob/main/bigData/Flink/picture/flink_deployment_overview.svg)
+![images](https://github.com/LadyTao/study-notes/blob/main/bigData/Flink/picture/flink_deployment_overview.svg)
 上图展示了flink的全部组件。最重要的是其中的个这3个：
 * client: 将流式或批量处理任务编译打包成flink可以处理的jobGraph，并发送到JobManager。
 * JobManager: Flink的中央协调组件，根据不同的资源提供者(k8s,yarn,standlone)，其高可用、资源分配行为以及任务提交模式会有很大不同。
