--- a/bigData/Flink/安装部署.md
+++ b/bigData/Flink/安装部署.md
@@ -14,7 +14,7 @@
 
 
 #### 部署模式
-![d350a44f8c5aa67339041eb84a948691.svg+xml](en-resource://database/1089:1)
+![images](https://github.com/LadyTao/study-notes/blob/main/bigData/Flink/picture/deployment_modes.svg)
 三种部署模式的区别在于2点：
 ①集群的生命周期以及资源隔离机制。
 ②应用程序的main方法是在客户端执行还是集群(JobManager)中执行。
