--- a/bigData/Flink/6. flink端到端一致性.md
+++ b/bigData/Flink/6. flink端到端一致性.md
@@ -1,6 +1,6 @@
 flink端到端精准一次消费，需要有三个地方的保证：
 
-![c6e445f05af9e085771c09f09e2c6c07.jpeg](en-resource://database/1151:1)
+![image](https://github.com/LadyTao/study-notes/blob/main/bigData/Flink/picture/%E7%AB%AF%E5%88%B0%E7%AB%AF%E4%B8%80%E8%87%B4.jpg)
 
 前面两个比较好说，因为都是在flink内部。但是在sink阶段要保证精准一次是困难的，因为这已经属于外部系统了，flink本身已经无法控制了。所以端到端一致性不是光靠flink自身就能实现的，外部系统需要一定的机制（事务机制）才行。
 
@@ -8,10 +8,11 @@ flink端到端精准一次消费，需要有三个地方的保证：
 **第一阶段：表决** 协调者发送投票表决，所有的参与者需要返回是否通过的消息；
 **第二阶段：提交** 只有当所有参与者确认通过，那么每个参与者本地提交事务，否则取消事务。
 
-![6a5210afb3bacad49d2421495bee174f.jpeg](en-resource://database/1153:1)
+![image](https://github.com/LadyTao/study-notes/blob/main/bigData/Flink/picture/%E8%AF%BB%E5%86%99kafka.jpg)
 
 以从kafka读数据写入kafka为例，结合flink流程来讲解：
-![928209dc6f801959fbacaf4284e22778.jpeg](en-resource://database/1155:1)
+
+![image](https://github.com/LadyTao/study-notes/blob/main/bigData/Flink/picture/%E6%B5%81%E7%A8%8B%E8%AF%A6%E8%A7%A3.jpg)
 
 用自己的话总结一下：
 1）Flink首先从source kafka消费一批数据，经过operator处理后需要写入到sink的kafka。此时需要开启一个外部kafka的事务，先将数据写入到kafka，但是数据是未提交状态(uncommited)，这个阶段称为预提交(pre-commit)。
